// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropdownMenu > should allow for a custom dropdown icon before or after the children 1`] = `
<button
  aria-haspopup="menu"
  class="rmd-button rmd-button--text rmd-interaction-surface"
  id="menubutton-_r_1s_"
  type="button"
>
  <span>
    Dropdown
  </span>
  <span
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate"
  >
    favorite
  </span>
</button>
`;

exports[`DropdownMenu > should allow for a custom dropdown icon before or after the children 2`] = `
<button
  aria-haspopup="menu"
  class="rmd-button rmd-button--text rmd-interaction-surface"
  id="menubutton-_r_1s_"
  type="button"
>
  <span
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate"
  >
    favorite
  </span>
  <span>
    Dropdown
  </span>
</button>
`;

exports[`DropdownMenu > should allow for a custom dropdown icon before or after the children 3`] = `
<button
  aria-haspopup="menu"
  class="rmd-button rmd-button--text rmd-interaction-surface"
  id="menubutton-_r_1s_"
  type="button"
>
  <span
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
  >
    favorite
  </span>
  <span>
    Dropdown
  </span>
</button>
`;

exports[`DropdownMenu > should be able to render as a sheet 1`] = `
<div
  aria-labelledby="menubutton-_r_1f_"
  class="rmd-dialog rmd-dialog--fixed rmd-dialog--outline rmd-sheet rmd-sheet--vertical rmd-sheet--raised rmd-sheet--bottom rmd-sheet--touchable-height"
  id="dialog-_r_1l_"
  role="dialog"
  tabindex="-1"
>
  <div
    class="rmd-box rmd-box--gap rmd-box--padded rmd-box--align-center rmd-dialog__header"
  >
    <button
      class="rmd-button rmd-button--text rmd-interaction-surface"
      type="button"
    >
      <span>
        Header Close
      </span>
    </button>
  </div>
  <div
    aria-labelledby="menubutton-_r_1f_"
    class="rmd-menu"
    id="menu-_r_1h_"
    role="menu"
    tabindex="0"
  >
    <ul
      class="rmd-list"
      role="none"
    >
      <li
        class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item"
        id="menuitem-_r_1m_"
        role="menuitem"
        tabindex="-1"
      >
        <span
          class="rmd-list-item__text"
        >
          Item 1
        </span>
      </li>
      <li
        class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item"
        id="menuitem-_r_1n_"
        role="menuitem"
        tabindex="-1"
      >
        <span
          class="rmd-list-item__text"
        >
          Item 2
        </span>
      </li>
      <li
        class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item"
        id="menuitem-_r_1o_"
        role="menuitem"
        tabindex="-1"
      >
        <span
          class="rmd-list-item__text"
        >
          Item 3
        </span>
      </li>
    </ul>
  </div>
  <footer
    class="rmd-dialog__footer rmd-dialog__footer--flex rmd-dialog__footer--end"
  >
    <button
      class="rmd-button rmd-button--text rmd-interaction-surface"
      type="button"
    >
      <span>
        Footer Close
      </span>
    </button>
  </footer>
</div>
`;

exports[`DropdownMenu > should remove the dropdown icon when rendered as an icon button 1`] = `
<button
  aria-haspopup="menu"
  aria-label="Options"
  class="rmd-button rmd-button--icon rmd-interaction-surface"
  id="menubutton-_r_1p_"
  type="button"
>
  <span
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
  >
    more_vert
  </span>
</button>
`;

exports[`DropdownMenu > should remove the dropdown icon when rendered as an icon button 2`] = `
<button
  aria-haspopup="menu"
  aria-label="Options"
  class="rmd-button rmd-button--icon rmd-button--contained rmd-background-container rmd-secondary-container rmd-interaction-surface"
  id="menubutton-_r_1p_"
  type="button"
>
  <span
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
  >
    more_vert
  </span>
</button>
`;

exports[`DropdownMenu > should render as a button and toggle the visibility when clicked 1`] = `
<button
  aria-haspopup="menu"
  class="rmd-button rmd-button--text rmd-interaction-surface"
  id="menubutton-_r_0_"
  type="button"
>
  <span>
    Dropdown
  </span>
  <span
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate"
  >
    arrow_drop_down
  </span>
</button>
`;

exports[`DropdownMenu > should render as a button and toggle the visibility when clicked 2`] = `
<div
  aria-labelledby="menubutton-_r_0_"
  class="rmd-menu rmd-menu--elevated"
  id="menu-_r_2_"
  role="menu"
  style="position: fixed; transform-origin: 0 0; left: 16px; top: 0px;"
  tabindex="-1"
>
  <ul
    class="rmd-list"
    role="none"
  >
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item"
      id="menuitem-_r_3_"
      role="menuitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        Item 1
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item"
      id="menuitem-_r_4_"
      role="menuitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        Item 2
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item"
      id="menuitem-_r_5_"
      role="menuitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        Item 3
      </span>
    </li>
  </ul>
</div>
`;

exports[`DropdownMenu > should render as a menuitem when a DropdownMenu is a child of another DropdownMenu 1`] = `
<li
  aria-haspopup="menu"
  class="rmd-list-item rmd-list-item--medium rmd-interaction-surface rmd-menu-item"
  id="menuitem-_r_22_"
  role="menuitem"
  tabindex="-1"
>
  <span
    class="rmd-list-item__text"
  >
    Nested Dropdown 1
  </span>
  <span
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
  >
    keyboard_arrow_right
  </span>
</li>
`;

exports[`DropdownMenu > should render as a menuitem when a DropdownMenu is a child of another DropdownMenu 2`] = `
<li
  aria-haspopup="dialog"
  class="rmd-list-item rmd-list-item--medium rmd-interaction-surface rmd-menu-item"
  id="menuitem-_r_26_"
  role="menuitem"
  tabindex="-1"
>
  <span
    class="rmd-list-item__text"
  >
    Nested Dropdown 2
  </span>
  <span
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
  >
    keyboard_arrow_right
  </span>
</li>
`;
